syntax = "proto3";

option go_package = "./dbpb/;dbpb";

message DBParamResponseStatus {
  int32 code = 1;
  string message = 2;
}

message DBCreateParamGroupRequest {
  string name = 1;
  int32 dbType = 2;
  int32 hasDefault = 3;
  string version = 4;
  string spec = 5;
  int32 groupType = 6;
  int64 parentId = 7;
  string note = 8;
  repeated DBSubmitParamDTO params = 9;
}

message DBCreateParamGroupResponse {
  int64 paramGroupId = 1;
  DBParamResponseStatus status = 2;
}

message DBUpdateParamGroupRequest {
  int64 paramGroupId = 1;
  string name = 2;
  string version = 3;
  string spec = 4;
  string note = 5;
  repeated DBSubmitParamDTO params = 6;
}

message DBUpdateParamGroupResponse {
  int64 paramGroupId = 1;
  DBParamResponseStatus status = 2;
}

message DBDeleteParamGroupRequest {
  int64 paramGroupId = 1;
}

message DBDeleteParamGroupResponse {
  int64 paramGroupId = 1;
  DBParamResponseStatus status = 2;
}

message DBListParamGroupRequest {
  string name = 1;
  int32 dbType = 2;
  string version = 3;
  int32 hasDefault = 4;
  string spec = 5;
  bool hasDetail = 6;
  DBParamsPageDTO page = 7;
}

message DBListParamGroupResponse {
  repeated DBParamGroupDTO paramGroups = 1;
  DBParamsPageDTO page = 2;
  DBParamResponseStatus status = 3;
}

message DBFindParamGroupByIDRequest {
  int64 paramGroupId = 1;
}

message DBFindParamGroupByIDResponse {
  DBParamGroupDTO paramGroup = 1;
  DBParamResponseStatus status = 2;
}

message DBApplyParamGroupRequest {
  int64 paramGroupId = 1;
  string clusterId = 2;
  repeated DBApplyParamDTO params = 3;
}

message DBApplyParamGroupResponse {
  int64 paramGroupId = 1;
  string clusterId = 2;
  DBParamResponseStatus status = 3;
}

message DBFindParamsByClusterIdRequest {
  string clusterId = 1;
  DBParamsPageDTO page = 2;
}

message DBFindParamsByClusterIdResponse {
  int64 paramGroupId = 1;
  repeated DBClusterParamDTO params = 2;
  DBParamsPageDTO page = 3;
  DBParamResponseStatus status = 4;
}

message DBUpdateClusterParamsRequest {
  string clusterId = 1;
  repeated DBApplyParamDTO params = 2;
}

message DBUpdateClusterParamsResponse {
  string clusterId = 1;
  DBParamResponseStatus status = 2;
}

message DBParamGroupDTO {
  int64 paramGroupId = 1;
  string name = 2;
  int32 dbType = 3;
  int32 hasDefault = 4;
  string version = 5;
  string spec = 6;
  int32 groupType = 7;
  string note = 8;
  int64 createTime = 9;
  int64 updateTime = 10;
  repeated DBParamDTO params = 11;
}

message DBParamDTO {
  int64 paramId = 1;
  string name = 2;
  string componentType = 3;
  int32 type = 4;
  string unit = 5;
  string range = 6;
  int32 hasReboot = 7;
  int32 source = 8;
  string defaultValue = 9;
  string description = 10;
  string note = 11;
  int64 createTime = 12;
  int64 updateTime = 13;
}

message DBClusterParamDTO {
  int64 paramId = 1;
  string name = 2;
  string componentType = 3;
  int32 type = 4;
  string unit = 5;
  string range = 6;
  int32 hasReboot = 7;
  int32 source = 8;
  string defaultValue = 9;
  string description = 10;
  string note = 11;
  int64 createTime = 12;
  int64 updateTime = 13;
  DBParamRealValueDTO realValue = 14;
}

message DBApplyParamDTO {
  int64 paramId = 1;
  DBParamRealValueDTO realValue = 2;
}

message DBParamRealValueDTO {
  string cluster = 1;
  repeated DBParamInstanceRealValueDTO instances = 2;
}

message DBParamInstanceRealValueDTO {
  string instance = 1;
  string value = 2;
}

message DBSubmitParamDTO {
  int64 paramId = 1;
  string defaultValue = 2;
  string note = 3;
}

message DBParamsPageDTO {
  int32 page = 1;
  int32 pageSize = 2;
  int32 total = 3;
}